<resources>
    <string name="not_int_demo">Doesn\'t exist in demo version</string>
    <string name="not_implemented">Not implemented</string>
    <string name="campaign">CAMPAIGN</string>
    <string name="tutorial">TRAININGS</string>
    <string name="single_game">SINGLE GAME</string>
    <string name="multiplayer_game">MULTIPLAYER GAME</string>
    <string name="sandbox">SANDBOX</string>
    <string name="tutorial_click_plus">Click on \'+\' to get more oxygen</string>
    <string name="tutorial_oxygen_value">Check your new oxygen amount\n(click anywhere to continue)</string>
    <string name="tutorial_constructions_button">Click on the button to see available constructions</string>
    <string name="tutorial_construction_popup">Existing constructions and their prices</string>
    <string name="tutorial_constructions_defence_building">For protection it\'s better to create the defence building</string>
    <string name="tutorial_description_object_characteristics">Below you can find the displayed building characteristics</string>
    <string name="tutorial_description_object_unit">The unit characteristics you can find with:\nclick on the unit image\nor click on his name</string>
    <string name="tutorial_description_create_building">Now it\'s a time to create the defence building</string>
    <string name="tutorial_description_buildings_amount">Buildings amount were changed</string>
    <string name="tutorial_description_previous_building">Click an arrow to move to the previous building</string>
    <string name="tutorial_description_create_building_2">Now it\'s a time to create another building</string>
    <string name="tutorial_description_building_settings">Click on the button to check the building settings</string>
    <string name="tutorial_description_hide">Click on an empty area to hide the popup</string>
    <string name="tutorial_description_suppressor_usage">If you\'re losing you can long-click on you planet\nto trigger the suppressor</string>
    <string name="tutorial_description_suppressor_description">Suppressor destroys all enemy units\non your side of the game field</string>
    <string name="tutorial_task">Your task is to survive during the rest of the time\nGood luck!</string>
    <string name="choose_alliance">Alliance</string>
    <string-array name="alliances">
        <item>@string/imperials</item>
        <item>@string/rebels</item>
        <item>@string/mutants</item>
    </string-array>
    <string name="imperials">Imperials</string>
    <string name="rebels">Rebels</string>
    <string name="mutants">Mutants</string>
    <string name="planet1">Planet 1</string>
    <string name="planet2">Planet 2</string>
    <string name="camp">Camp</string>
    <string name="tent">Tent</string>
    <string name="barracks">Barracks</string>
    <string name="shooters_hall">ShootersHall</string>
    <string name="training_center">TrainingCenter</string>
    <string name="workshop">Workshop</string>
    <string name="laboratory">Laboratory</string>
    <string name="bunker">Bunker</string>
    <string name="defender">Defender</string>
    <string name="municipality">Municipality</string>
    <string name="earth_artifact">Earth Artifact</string>
    <string name="conscript">Conscript</string>
    <string name="grant">Grant</string>
    <string name="sergeant">Sergeant</string>
    <string name="boy_scout">Boy Scout</string>
    <string name="scout">Scout</string>
    <string name="infantrymen">Infantrymen</string>
    <string name="SF">SF</string>
    <string name="sniper">Sniper</string>
    <string name="killer">Killer</string>
    <string name="agent">Agent</string>
    <string name="spy">Spy</string>
    <string name="robot">Robot</string>
    <string name="metal_killer">Metal Killer</string>
    <string name="demolisher">Demolisher</string>
    <string name="superman">Superman</string>
    <string name="underground">Underground</string>
    <string name="factory">Factory</string>
    <string name="bomos">Bomos</string>
    <string name="hospital">Hospital</string>
    <string name="minery">Minery</string>
    <string name="artillery">Artillery</string>
    <string name="sabotage_center">Sabotage Center</string>
    <string name="fort">fort</string>
    <string name="caches">Caches</string>
    <string name="space_material">Space Material</string>
    <string name="machine_gunner">Machine Gunner</string>
    <string name="mechanical_soldier">Mechanical Soldier</string>
    <string name="oplot_u">Oplot U</string>
    <string name="oplot_m">Oplot M</string>
    <string name="suicide">Suicide</string>
    <string name="priest">Priest</string>
    <string name="doctor">Doctor</string>
    <string name="shaman">Shaman</string>
    <string name="engineer">Engineer</string>
    <string name="exploder">Exploder</string>
    <string name="ballista">Ballista</string>
    <string name="thor">Thor</string>
    <string name="recruiter">Recruiter</string>
    <string name="saboteur">Saboteur</string>
    <string name="water_cave">Water Cave</string>
    <string name="invisible_plain">Invisible Plain</string>
    <string name="hydra_pond">Hydra Pond</string>
    <string name="poison_cave">Poison Cave</string>
    <string name="web">Web</string>
    <string name="mountain_cave">Mountain Cave</string>
    <string name="hell">Hell</string>
    <string name="bastion">Bastion</string>
    <string name="reptile_city">Reptile City</string>
    <string name="king_of_snakes">King of Snakes</string>
    <string name="lizard">Lizard</string>
    <string name="tortoise">Tortoise</string>
    <string name="dragon">Dragon</string>
    <string name="scorpion">Scorpion</string>
    <string name="king_scorpion">Scorpion King</string>
    <string name="young_hydra">Young Hydra</string>
    <string name="hydra">Hydra</string>
    <string name="eel">Eel</string>
    <string name="cobra">Cobra</string>
    <string name="spider1">Spider 1</string>
    <string name="spider2">Spider 2</string>
    <string name="bat">Bat</string>
    <string name="vampire">Vampire</string>
    <string name="agat">Agat</string>
    <string name="kak">Kak</string>
    <string name="settings">Settings</string>
    <string name="settings_health_bar_behaviour">Health bar</string>
    <string name="developers_mode">Developers mode</string>
    <string name="developers_mode_on">Dev. mode enabled</string>
    <string name="developers_mode_off">Dev. mode disabled</string>
    <string name="pick_unit_health_bar_behavior">HEALTH BAR BEHAVIOUR</string>
    <string name="health_bar_default">Hidden until unit\nwas hit</string>
    <string name="health_bar_always_hidden">Always hidden</string>
    <string name="health_bar_always_visible">Always visible</string>
    <string name="category_game">Game</string>
    <string name="game_sounds">Game Sounds</string>
    <string name="game_sounds_on">Game sounds enabled</string>
    <string name="game_sounds_off">Game sounds disabled</string>
    <string name="game_sounds_volume">Game Sounds</string>
    <string name="music">Music</string>
    <string name="music_on">Music enabled</string>
    <string name="music_off">Music disabled</string>
    <string name="music_volume">Music</string>
    <string name="category_sounds">Sounds</string>
    <string name="category_other">Other</string>
    <string name="app_name">Empires Always Fall</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="exit_click">Double click to exit</string>
    <string name="exit_loading">You can\'t quite during loading</string>
    <string name="connect">Connect</string>
    <string name="orbital_station">Orbital station</string>
    <string name="unmovable">Unmovable</string>
    <string name="exit_confirmation">Do you really want\nto exit?</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="used">Used</string>
    <string name="unused">Unused</string>
    <string name="three">Three!</string>
    <string name="two">Two!</string>
    <string name="one">One!</string>
    <string name="start">Go!</string>
    <string name="units_capacity_reached">Units capacity reached</string>
    <string name="create_game">Create game</string>
    <string name="direct_ip">Write direct ip</string>
    <string name="games_list">Games list</string>
    <string name="ip_address">Ip address : </string>
    <string name="your_ip_address">Your ip address : </string>
    <string name="template_ip">125.125.125.125</string>
    <string name="no_opponents">No clients connected to your server…</string>
    <string name="your_opponent_name">Your opponent name : </string>
    <string name="your_opponent_ip">Your opponent ip : </string>
    <string name="start_game">Start game</string>
    <string name="ip_address_separator">.</string>
    <string name="connected_client_with_ip">Connected client with ip : </string>
    <string name="you_are_connected_to_server">You are connected to server with ip : </string>
    <string name="planet_system_star">The star belongs to constellation: %1$s\nThe star code name: %2$s</string>
    <string name="no_constellation">None</string>
    <string name="player_planet_text">Your base: %1$s\nAlliance name: %2$s\nSuppressor: %3$s</string>
    <string name="opponent_planet_text">Your enemy base: %1$s\nAlliance name: %2$s\nSuppressor: %3$s</string>
    <string name="suppressor_being_used">Suppressor being used</string>
    <string name="wrong_planet_suppressor">You can use the Suppressor only on your base</string>
    <string name="sun">Helios</string>
    <string name="new_sun">Amaterasu</string>
    <string name="earth">Earth</string>
    <string name="armor_unarmored">unarmored</string>
    <string name="armor_physical">physical</string>
    <string name="armor_electromagnetic">electromagnetic</string>
    <string name="armor_cherenkov">cherenkov</string>
    <string name="armor_higgs">higgs</string>
    <string name="armor_mixed">mixed</string>
    <string name="damage_railgun">railgun</string>
    <string name="damage_laser">laser</string>
    <string name="damage_neutrino">neutrino</string>
    <string name="damage_higgson">higgson</string>
    <string name="damage_annihilator">annihilator</string>
    <string name="damage_quaker">quaker</string>
    <string name="fire_rate_very_slow">very slow</string>
    <string name="fire_rate_slow">slow</string>
    <string name="fire_rate_normal">normal</string>
    <string name="fire_rate_high">high</string>
    <string name="sandbox_select">Select</string>
    <string name="sandbox_hint">Click on the game field to add units</string>
    <string name="description_build_button">Build</string>
    <string name="description_back_button">Back</string>
    <string name="description_upgrade_button">Upgrade</string>
    <string name="description_settings_button">Settings</string>
    <string name="description_cost">Cost :</string>
    <string name="description_produce">Produce :</string>
    <string name="description_description">Description :</string>
    <string name="description_unit_producing_time">Unit producing time :</string>
    <string name="description_upgrade">Upgrade :</string>
    <string name="unit_movement_path">UNIT PATH</string>
    <string name="building_settings_top">Unit moves atop\nof the star</string>
    <string name="building_settings_bottom">Unit moves bottom\nof the star</string>
    <string name="building_settings_pause">Stop\nproduction</string>
    <string name="description_building">Building :</string>
    <string name="description_speed">Speed :</string>
    <string name="description_health">Health :</string>
    <string name="description_reload_time">Fire-rate :</string>
    <string name="description_unique">Unique :</string>
    <string name="description_damage">Damage :</string>
</resources>