<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/title_container"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/dialog_header"
        android:layout_width="358dip"
        android:layout_height="58dip">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/DialogTitleText"
            android:text="@string/pick_unit_health_bar_behavior"/>
    </FrameLayout>

    <RadioGroup
        android:id="@+id/health_bar_behaviour"
        android:layout_below="@id/title_container"
        android:layout_centerHorizontal="true"
        android:layout_width="358dip"
        android:layout_height="248dip"
        android:background="@drawable/dialog_background"
        android:paddingTop="15dip"
        android:paddingLeft="25dip"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/health_bar_default"
            style="@style/DialogRadioButton"
            android:text="@string/health_bar_default"/>

        <RadioButton
            android:id="@+id/health_bar_visible"
            style="@style/DialogRadioButton"
            android:text="@string/health_bar_always_visible"/>

        <RadioButton
            android:id="@+id/health_bar_invisible"
            style="@style/DialogRadioButton"
            android:text="@string/health_bar_always_hidden"/>
    </RadioGroup>

    <Button
        android:id="@+id/done_button"
        android:layout_below="@id/title_container"
        android:layout_marginTop="205dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="2dip"
        android:paddingBottom="2dip"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        style="@style/DialogTitleText"
        android:text="@string/done"
        android:background="@drawable/dialog_button_selector"/>

</RelativeLayout>