<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_container"
        android:layout_width="387dip"
        android:gravity="center"
        android:layout_height="63dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/settings_building_dialog_header"
        style="@style/DialogTitleText"
        android:text="@string/unit_movement_path"/>

    <RadioGroup
        android:id="@+id/building_settings"
        android:layout_below="@id/title_container"
        android:layout_centerHorizontal="true"
        android:layout_width="387dip"
        android:layout_height="248dip"
        android:background="@drawable/settings_building_dialog_background"
        android:paddingTop="20dip"
        android:paddingLeft="40dip"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/building_settings_top"
            style="@style/DialogRadioButtonDefault"
            android:layout_margin="10dip"
            android:button="@drawable/path_top_checkbox_selector"
            android:text="@string/building_settings_top"/>

        <RadioButton
            android:id="@+id/building_settings_bottom"
            style="@style/DialogRadioButtonDefault"
            android:layout_margin="10dip"
            android:button="@drawable/path_bottom_checkbox_selector"
            android:text="@string/building_settings_bottom"/>

        <RadioButton
            android:id="@+id/building_settings_pause"
            style="@style/DialogRadioButtonDefault"
            android:layout_margin="10dip"
            android:button="@drawable/path_pause_checkbox_selector"
            android:text="@string/building_settings_pause"/>
    </RadioGroup>

    <Button
        android:id="@+id/done_button"
        android:layout_below="@id/title_container"
        android:layout_marginTop="205dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="2dip"
        android:paddingBottom="2dip"
        android:layout_width="wrap_content"
        android:minWidth="150dip"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        style="@style/DialogTitleText"
        android:text="@string/done"
        android:background="@drawable/building_settings_done_button_selector"/>

</RelativeLayout>