<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:background="@drawable/settings_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <!-- back button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1080"
        android:orientation="vertical">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="871"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="160"
            android:weightSum="1920"
            android:orientation="horizontal">

            <android.support.v4.widget.Space
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="44"/>

            <Button
                android:id="@+id/back_button"
                android:layout_height="match_parent"
                android:background="@drawable/campaign_back_button_selector"
                android:layout_width="0dip"
                android:layout_weight="160"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="1080"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="35"/>


        <!-- settings text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:weightSum="1920"
            android:layout_gravity="center_vertical"
            android:layout_weight="72">

            <android.support.v4.widget.Space
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="260"/>

            <TextView
                android:id="@+id/title_text"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="417"
                style="@style/SettingsTitle"
                android:text="@string/settings"/>

            <android.support.v4.widget.Space
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1202"/>
        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="118"/>

        <!-- game sounds -->
        <com.gmail.yaroslavlancelot.eafall.android.view.SettingsVolume
            android:id="@+id/sound_volume"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="153"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="89"/>

        <!-- game music -->
        <com.gmail.yaroslavlancelot.eafall.android.view.SettingsVolume
            android:id="@+id/music_volume"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="153"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="51"/>

        <!-- health bar and dev mode -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:weightSum="1920"
            android:layout_weight="252">

            <android.support.v4.widget.Space
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="83"/>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1719"
                android:weightSum="1719">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="765"
                    android:orientation="vertical">

                    <android.support.v4.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="0dip"
                        android:layout_weight="69"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dip"
                        android:layout_weight="183"
                        android:weightSum="765">

                        <View
                            android:layout_width="0dip"
                            android:layout_height="match_parent"
                            android:layout_weight="222"
                            android:background="@drawable/settings_health_bar_holder"/>

                        <LinearLayout
                            android:layout_width="0dip"
                            android:layout_height="match_parent"
                            android:layout_weight="543"
                            android:weightSum="183"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/health_bar_behaviour"
                                android:layout_width="match_parent"
                                android:layout_weight="124"
                                android:layout_height="0dip"
                                android:text="@string/settings_health_bar_behaviour"
                                style="@style/SettingsHealthBarText"
                                android:background="@drawable/settings_health_bar_button_selector"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0dip"
                                android:layout_weight="59"
                                android:background="@drawable/settings_health_bar_wires"/>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="57"/>

                <!-- developers options -->
                <FrameLayout
                    android:layout_width="0dip"
                    android:layout_weight="897"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@drawable/settings_dev_mode_outer_shape">

                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dip"
                            android:background="@drawable/settings_dev_mode_inner_shape">

                            <com.gmail.yaroslavlancelot.eafall.android.view.MagicTextView
                                android:text="@string/developers_mode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/SettingsCheckboxTitle"/>

                            <TextView
                                android:id="@+id/developers_mode_state_text"
                                style="@style/SettingsDevModeCheckboxDescription"
                                android:text="@string/developers_mode_off"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>

                        <CheckBox
                            android:id="@+id/developers_mode_checkbox"
                            android:layout_marginLeft="10dip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:button="@drawable/settings_checkbox_selector"/>

                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="118"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>